BUGFIX: correct CSS targeting all .row and .col instead of .collapsable_header .col and .row

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,13 +10,13 @@ body{
     padding: 0 0.5em;
 }
 
-.row {
+.collapsible-header > .row {
     min-width: 100%;
     min-height: 100%;
     margin: 0;
 }
 
-.col {
+.collapsible-header > .col {
     min-height: 100%;
     height: 100%;
     padding: 0;
